# iot-hx711

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: release-firmware.yml
api/: openapi.yaml
doc/: webui-refactor-prompt.md
main/: CMakeLists.txt  Kconfig.projbuild  app_activity_led.c  app_activity_led.h  app_mdns.c  app_mdns.h  app_mqtt.c  app_mqtt.h  app_sample.c  app_sample.h  app_web.c  app_web.h  app_wifi.c  app_wifi.h  idf_component.yml  main.c
test/: create_broker.sh  mqtt_pub.sh  mqtt_sub.sh
webui/: README.md  index.html  mock-api.config.json  package-lock.json  package.json  script.mjs  style.css  vite.config.mjs
webui/mock/: config.json  info.json  mqtt.json  sample.json  wifi.json
webui/mock/api/: partitions.json
webui/scripts/: gzip-dist.mjs
webui/src/: index.html  script.mjs  style.css
